OpenJMLTest/test/gitbug778/expected
test/gitbug778/error.java:81: error: method xorFunctionSameLength in class error cannot be applied to given types;
				//@ assert Arrays.equals(res,xorFunctionSameLength(lengthBalancerAddingZeroes(byteArray1, ( byteArray2.length -byteArray1.length) )),byteArray2);
				                             ^
  required: byte[],byte[]
  found:    byte[]
  reason: actual and formal argument lists differ in length
Operation not performed because of parse or type errors
1 error
